# agrade

./: CNAME  dashboard.html  index.html  login  package-lock.json  package.json  server.js  signup.html
.github/workflows/: build.yml  release.yml
server/: package.json  server.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
